# GitLog

./: CMakeLists.txt
GitBrowse/: CMakeLists.txt  GitBrowse.qml  GitFilesPage.qml  GitRefsPage.qml  main.cpp
GitCore/: CMakeLists.txt  GitApplication.cpp  GitApplication.h  GitDiffLine.cpp  GitDiffLine.h  GitDiffModel.cpp  GitDiffModel.h  GitFileInfo.cpp  GitFileInfo.h  GitFileStatus.cpp  GitFileStatus.h  GitFilesModel.cpp  GitFilesModel.h  GitRefsModel.cpp  GitRefsModel.h  GitRepository.cpp  GitRepository.h  GitStatusModel.cpp  GitStatusModel.h  GraphItem.cpp  GraphItem.h  ReferenceInfo.cpp  ReferenceInfo.h
GitCore/GitTools/: CommitInfo.h  CommitRefsModel.cpp  CommitRefsModel.h  CreateBranchDialog.cpp  CreateBranchDialog.h  DiffModel.cpp  DiffModel.h  ExceptionTooltip.h  GitApplication.cpp  GitCommitFiles.cpp  GitCommitFiles.h  GitLogModel.cpp  GitLogModel.h  QuickDialog.h  RefsModel.cpp  RefsModel.h  base.h  reference_info.h  string.h
GitCore/qml/: CreateBranchDialog.qml  DeleteBranchDialog.qml  DiffArea.qml  LineInput.qml  MultiLineInput.qml  RefsComboBox.qml
GitDiff/: CMakeLists.txt  GitDiff.cpp  GitDiff.h  GitDiff.qml  GitDiffResources.qrc  main.cpp
GitDiff/qml/: GitDiff.qml
GitLog/: CMakeLists.txt  GitLog.qrc  LogWindow.cpp  LogWindow.h  main.cpp
GitLog/qml/: CommitDialog.qml  DiffPage.qml  GitLog.qml  LogView.qml  MainWindow.qml
GitStatus/: CMakeLists.txt  GitDiffPage.qml  GitMergePage.qml  GitStatus.cpp  GitStatus.h  GitStatus.qml  GitStatusPage.qml  main.cpp
libs/awCore/: CMakeLists.txt  ThreadData.h  exception.cpp  exception.h  export.h  log.cpp  log.h  std_io.cpp  std_io.h  string.cpp  string.h  thread.cpp  thread.h  trace.h
libs/gitcxx/: CMakeLists.txt  README.md  SignatureInfo.cpp  SignatureInfo.h  blob.cpp  blob.h  commit.cpp  commit.h  common.cpp  common.h  config.cpp  config.h  diff.cpp  diff.h  diff_delta.h  diff_file.h  exception.h  index.cpp  index.h  object.cpp  object.h  oid.cpp  oid.h  reference.cpp  reference.h  reference_iterator.cpp  reference_iterator.h  repository.cpp  repository.h  revwalk.cpp  revwalk.h  signature.cpp  signature.h  tree.cpp  tree.h
